--- a/src/index.html
+++ b/src/index.html
@@ -40,22 +40,23 @@
 
       <!-- banner section star -->
       <section >
-        <div class="bg-[#12132D] h-[550px] w-full rounded-3xl relative flex items-center justify-center ">
+        <div class="bg-[#12132D] h-[550px] w-full rounded-3xl relative flex items-center justify-center p-20 ">
           <img src="images/bgbanner.png" alt="" class="absolute bottom-0" />
 
           <!-- banner contain -->
-          <div class="flex flex-col md:flex-row justify-between gap-20">
+          <div class="flex flex-col md:flex-row justify-between gap-20 text-center md:text-left">
             <!-- left side -->
-            <div >
-              <h1 class="text-light-color">Welcome to the <br /><span>ReTro</span> Forum</h1>
-              <p class="text-light-color">
+            <div class="space-y-5" >
+              <h1 class="text-light-color md:text-6xl   leading-snug font-extrabold">Welcome to the <br /><span class="text-[#6264FB]">ReTro</span> Forum</h1>
+              <p class="text-light-color text-xl">
                 Share your favorite opinion and win and wp forum coffee mug!
               </p>
               <!-- search file -->
-              <div class="flex w-full justify-between ">
-                <input type="text" placeholder="Search here anything" />
-                <button
-                  class="btn btn-primary text-light-color font-extrabold rounded-full px-7"
+              <div class="flex w-full justify-between bg-light-color rounded-full p-1">
+                <input type="text" id="search-file" 
+                placeholder="Search here anything" class=" w-full max-w-xs z-10 border-none outline-none ml-5" />
+                <button id="search-btn"
+                  class="btn btn-primary text-light-color font-extrabold rounded-full px-7 "
                 >
                   Sign In
                 </button>
@@ -68,16 +69,16 @@
                     <h3 >01</h3>
                 </span>
                 <span>
-                    <h3>Registered Users</h1>
-                     <h3>01</h3>
+                    <h3>Forum</h1>
+                     <h3>05</h3>
                 </span>
                 <span>
-                    <h3 >Registered Users</h1>
-                     <h3 >01</h3>
+                    <h3 >Topics</h1>
+                     <h3 >03</h3>
                 </span>
                 <span>
-                    <h3 >Registered Users</h1>
-                     <h3 >01</h3>
+                    <h3 >Replies</h1>
+                     <h3 >02</h3>
                 </span>
             </div>
           </div>
@@ -88,7 +89,123 @@
     </header>
     <!-- header section end here -->
 
+
     <!-- main section start here -->
+    <main>
+      <!-- let's Discuss section start -->
+      <section>
+        <div class="text-center space-y-5 my-5">
+          <h1 class="font-extrabold text-5xl">Let's Discuss</h1>
+          <p class="font-bold text-gray-color">Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined .</p>
+        </div>
+        <!-- All card container -->
+        <div class="flex flex-col md:flex-row gap-10 justify-between">
+          <!-- left side -->
+          <div id="all-card-contianer" class="grow-1 space-y-6">
+              <!-- card one -->
+               <div class="bg-[#797DFC1A] p-6  rounded-2xl flex gap-4 hover:border-2 hover:border-[#797DFC] hover:bg-[#797DFC21] cursor-pointer">
+                <!-- profile -->
+                <div class="w-16 h-16 rounded-xl bg-light-color relative">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3001/3001758.png" alt="" class="w-auto h-auto">
+                    <span id="online" class="w-3 h-3 bg-[#10B981] block rounded-full absolute -top-1 -right-1"></span>
+               </div>
+               <!-- details -->
+               <div>
+                <div class="pb-5 border-b-2  border-dashed border-gray-color">
+                <p class="font-extrabold"># <span>Music</span>Designation: <span>Awlad Hossain</span></p>
+                <h3 class="font-bold">10 Kids Unaware of Their Halloween Costume</h>
+                <p class="font-bold">It’s one thing to subject yourself to ha Halloween costume mishap because, hey that’s your prerogative</p>
+                </div>
+                <!-- icons -->
+                <div class="flex justify-between items-center my-5">
+                  <div class="flex gap-x-10 items-center">
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-message"></i><span>560</span></div>
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-eye"></i><span>560</span></div>
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-clock"></i><span>560</span></div>
+                  </div>
+                   <button id="mark-btn" class="rounded-full h-7 w-7 bg-[#10B981] active:scale-105 "><i class="fa-solid fa-envelope text-light-color "></i></button>
+                </div>
+               </div>
+               </div>
+              <!-- card one -->
+               <div class="bg-[#797DFC1A] p-6  rounded-2xl flex gap-5">
+                <!-- profile -->
+                <div class="w-[72px] h-[72px] rounded-xl bg-light-color">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3001/3001758.png" alt="" class="w-auto h-auto">
+               </div>
+               <!-- details -->
+               <div>
+                <div class="pb-5 border-b-2  border-dashed border-gray-color">
+                <p class="font-extrabold"># <span>Music</span>Designation: <span>Awlad Hossain</span></p>
+                <h3 class="font-bold">10 Kids Unaware of Their Halloween Costume</h>
+                <p class="font-bold">It’s one thing to subject yourself to ha Halloween costume mishap because, hey that’s your prerogative</p>
+                </div>
+                <!-- icons -->
+                <div class="flex justify-between items-center my-5">
+                  <div class="flex gap-x-10 items-center">
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-message"></i><span>560</span></div>
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-eye"></i><span>560</span></div>
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-clock"></i><span>560</span></div>
+                  </div>
+                   <button id="mark-btn" class="rounded-full h-7 w-7 bg-[#10B981] active:scale-105 "><i class="fa-solid fa-envelope text-light-color "></i></button>
+                </div>
+               </div>
+               </div>
+              <!-- card one -->
+               <div class="bg-[#797DFC1A] p-6  rounded-2xl flex gap-5">
+                <!-- profile -->
+                <div class="w-[72px] h-[72px] rounded-xl bg-light-color">
+                    <img src="https://cdn-icons-png.flaticon.com/512/3001/3001758.png" alt="" class="w-auto h-auto">
+               </div>
+               <!-- details -->
+               <div>
+                <div class="pb-5 border-b-2  border-dashed border-gray-color">
+                <p class="font-extrabold"># <span>Music</span>Designation: <span>Awlad Hossain</span></p>
+                <h3 class="font-bold">10 Kids Unaware of Their Halloween Costume</h>
+                <p class="font-bold">It’s one thing to subject yourself to ha Halloween costume mishap because, hey that’s your prerogative</p>
+                </div>
+                <!-- icons -->
+                <div class="flex justify-between items-center my-5">
+                  <div class="flex gap-x-10 items-center">
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-message"></i><span>560</span></div>
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-eye"></i><span>560</span></div>
+                  <div class="space-x-3  font-bold text-gray-color"><i class="fa-regular fa-clock"></i><span>560</span></div>
+                  </div>
+                   <button id="mark-btn" class="rounded-full h-7 w-7 bg-[#10B981] active:scale-105 "><i class="fa-solid fa-envelope text-light-color "></i></button>
+                </div>
+               </div>
+               </div>
+          </div>
+          <!-- right side -->
+          <div >
+            <div class="bg-[#797DFC1A] md:w-[380px]  w-auto p-4 rounded-2xl">
+                  <div class="flex justify-between items-center">
+              <h3>Title</h3>
+              <h4 class="font-bold text-gray-color"><i class="fa-solid fa-check-double text-[#3DCE09] mr-2"></i> Make as read ( <span>1</span> )</h4>
+             </div>
+             <!-- marks list -->
+             <div id="marks-container">
+              <div class="flex justify-between items-center bg-light-color p-4 rounded-2xl gap-2 my-4">
+                <h4 class="font-extrabold">10 Kids Unaware of Their Halloween Costume</h4>
+                 <div class="space-x-3  font-bold text-gray-color flex items-center"><i class="fa-regular fa-eye"></i><span>560</span></div>
+              </div>
+             </div>
+             <!-- marks list -->
+             <div id="marks-container">
+              <div class="flex justify-between items-center bg-light-color p-4 rounded-2xl gap-2 my-4">
+                <h4 class="font-extrabold">10 Kids Unaware of Their Halloween Costume</h4>
+                 <div class="space-x-3  font-bold text-gray-color flex items-center"><i class="fa-regular fa-eye"></i><span>560</span></div>
+              </div>
+             </div>
+            </div>
+           
+            
+          </div>
+        </div>
+        <!-- All card container -->
+      </section>
+      <!-- let's Discuss section end -->
+    </main>
     <!-- main section end here -->
 
     <!-- script added -->
