Let's Discuss complete

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <a href="#"><i class="fa-regular fa-user"></i></a>
           <a href="#"><i class="fa-regular fa-flag"></i></a>
           <button
-            class="btn btn-primary text-light-color font-extrabold rounded-full px-7"
+            class="btn bg-[#797DFC] text-light-color font-extrabold rounded-full px-7"
           >
             Sign In
           </button>
@@ -40,14 +40,14 @@
 
       <!-- banner section star -->
       <section >
-        <div class="bg-[#12132D] h-[550px] w-full rounded-3xl relative flex items-center justify-center p-20 ">
+        <div class="bg-[#12132D] md:h-[550px] w-full rounded-3xl relative flex items-center justify-center p-20 ">
           <img src="images/bgbanner.png" alt="" class="absolute bottom-0" />
 
           <!-- banner contain -->
           <div class="flex flex-col md:flex-row justify-between gap-20 text-center md:text-left">
             <!-- left side -->
             <div class="space-y-5" >
-              <h1 class="text-light-color md:text-6xl   leading-snug font-extrabold">Welcome to the <br /><span class="text-[#6264FB]">ReTro</span> Forum</h1>
+              <h1 class="text-light-color md:text-6xl   leading-snug font-extrabold">Welcome to the <br /><span class="text-[#797DFC]">ReTro</span> Forum</h1>
               <p class="text-light-color text-xl">
                 Share your favorite opinion and win and wp forum coffee mug!
               </p>
@@ -56,7 +56,7 @@
                 <input type="text" id="search-file" 
                 placeholder="Search here anything" class=" w-full max-w-xs z-10 border-none outline-none ml-5" />
                 <button id="search-btn"
-                  class="btn btn-primary text-light-color font-extrabold rounded-full px-7 "
+                  class="btn bg-[#797DFC] text-light-color font-extrabold rounded-full px-7 "
                 >
                   Sign In
                 </button>
@@ -205,6 +205,65 @@
         <!-- All card container -->
       </section>
       <!-- let's Discuss section end -->
+
+      <!-- join our forum section start -->
+      <section>
+        <div class=" bg-[#0A1F4E]  rounded-3xl  md:h-[400px] flex justify-center p-5">
+          <div class="flex flex-col md:flex-row justify-between items-center gap-10">
+             <!-- left -->
+             <div class="space-y-5 ml-5">
+              <h1 class="text-light-color font-extrabold">Join Our Forum</h1>
+              <p class="text-light-color font-extrabold">Share your favorite opinion and win and wp forum coffee mug! Yes, you <br> can run unit tests and view the results directly within the app. </p>
+              <button
+            class="btn  bg-[#797DFC] text-light-color font-extrabold rounded-full px-7"
+          >
+            Sign In
+          </button>
+             </div>
+             <!-- right -->
+             <div>
+              <img src="images/joinforum.png" alt="">
+             </div>
+          </div>
+        </div>
+      </section>
+      <!-- join our forum section end -->
+
+      <!-- latest section start here -->
+      <section>
+         <div class="text-center space-y-5 my-5">
+          <h1 class="font-extrabold text-5xl">Latest Posts</h1>
+          <p class="font-bold text-gray-color">Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined.</p>
+        </div>
+
+        <!-- latest container -->
+        <div id="latest container">
+          <!-- card one -->
+          <div class="card card-compact  bg-base-100 shadow-xl">
+  <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+  <div class="card-body">
+    <span class=" flex items-center space-x-2">
+      <i class="fa-solid fa-calendar-days text-gray-color"></i>
+      <p class="font-extrabold">29 January 2024</p>
+
+    </span>
+    <h2 class="card-title font-extrabold">What will a mars habitat force that impact in our daily life!!!</h2>
+    <p class="font-bold text-gray-color">Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined.</p>
+    <div class="flex space-x-3">
+      <img src="https://cdn-icons-png.flaticon.com/512/4139/4139981.png" alt=" " class="w-11 rounded-full h-11">
+      <span>
+        <h4 class="text-lg font-extrabold">Cameron Williamson</h4>
+        <p>Unknown</p>
+      </span>
+    </div>
+    
+    </div>
+  </div>
+</div>
+        </div>
+        <!-- latest container -->
+      </section>
+      <!-- latest section start end -->
     </main>
     <!-- main section end here -->
 
