--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,10 @@
               <div class="flex w-full justify-between bg-light-color rounded-full p-1">
                 <input type="text" id="search-file" 
                 placeholder="Search here anything" class=" w-full max-w-xs z-10 border-none outline-none ml-5" />
-                <button id="search-btn"
-                  class="btn bg-[#797DFC] text-light-color font-extrabold rounded-full px-7 "
+                <button onclick="searchForum()"
+                  class="btn bg-[#797DFC] text-light-color font-extrabold rounded-full px-7 z-20 "
                 >
-                  Sign In
+                  Search
                 </button>
               </div>
             </div>
@@ -98,8 +98,18 @@
           <h1 class="font-extrabold text-5xl">Let's Discuss</h1>
           <p class="font-bold text-gray-color">Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined .</p>
         </div>
+         <!-- lodding bar -->
+         <div id="lodder" class="mb-40 mt-10 text-center hidden ">
+          <span class="loading loading-spinner text-accent w-28"></span>
+         </div>
+         <div id="errow" class=" text-center w-2/4 h-60 rounded-xl shadow-2xl mx-auto border-2 mt-10 bg-[#797DFC21] hidden">
+           <h2 class="mt-10">Data wasn't found</h2>
+           <p class="mt-5 text-xl">Errow : <span id="errow-name">kjsdfksjdf</span></p>
+         </div>
+         <!-- lodding bar -->
         <!-- All card container -->
-        <div class="flex flex-col md:flex-row gap-10 justify-between pt-5">
+        <div class="flex flex-col md:flex-row gap-10 justify-between pt-5 ">
+
           <!-- left side -->
           <div id="all-card-contianer" class="grow-1 space-y-6">
               <!-- card one -->
