some function added

--- a/src/index.html
+++ b/src/index.html
@@ -102,8 +102,9 @@
          <div id="lodder" class="mb-40 mt-10 text-center hidden ">
           <span class="loading loading-spinner text-accent w-28"></span>
          </div>
-         <div id="errow" class=" text-center w-2/4 h-60 rounded-xl shadow-2xl mx-auto border-2 mt-10 bg-[#797DFC21] hidden">
-           <h2 class="mt-10">Data wasn't found</h2>
+         <!-- eroow section -->
+         <div id="errow" class=" text-center w-3/4 md:w-2/4 h-60 rounded-xl shadow-2xl mx-auto border-2 mt-10 bg-[#797DFC21] hidden">
+           <h2 class="mt-10" id="errow-title">Data wasn't found</h2>
            <p class="mt-5 text-xl">Errow : <span id="errow-name">kjsdfksjdf</span></p>
          </div>
          <!-- lodding bar -->
