retro-forum complete

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
       <!-- let's Discuss section start -->
       <section>
         <div class="text-center space-y-5 my-5">
-          <h1 class="font-extrabold text-5xl">Let's Discuss</h1>
+          <h1 class="font-extrabold md:text-5xl">Let's Discuss</h1>
           <p class="font-bold text-gray-color">Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined .</p>
         </div>
          <!-- lodding bar -->
@@ -193,7 +193,7 @@
       <!-- latest section start here -->
       <section>
          <div class="text-center space-y-5 my-5">
-          <h1 class="font-extrabold text-5xl">Latest Posts</h1>
+          <h1 class="font-extrabold md:text-5xl">Latest Posts</h1>
           <p class="font-bold text-gray-color">Yes, you can run unit tests and view the results directly within the app. <br> The integrated testing features allow for a streamlined.</p>
         </div>
 
@@ -232,7 +232,7 @@
     <!-- footer section -->
     <footer class="bg-[#797DFC1D] py-5">
     <section>
-       <div class="text-center space-y-5 my-5">
+       <div class="text-center space-y-5 my-5 px-5">
           <h1 class="font-extrabold text-4xl">ReTro</h1>
           <p class="font-bold text-gray-color">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots <br> in a piece of classical Latin literature from 45 BC</p>
 
